--- a/sass/sections/_contact-form.scss
+++ b/sass/sections/_contact-form.scss
@@ -106,3 +106,8 @@
     }
 }
 
+#answer{
+    text-align: center;
+    font-size: 30px;
+    
+}
